--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://ssr.sady.vip:3306/mybatis?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.thymeleaf.cache=false
 
 
 //≈‰÷√¡Ÿ ±’À∫≈√‹¬Î
