--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-mybatis.type-aliases-package=com.springboot.entity
-mybatis.mapper-locations=classpath:mapper/*.xml
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mybatis?serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://ssr.sady.vip:3306/mybatis?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.thymeleaf.cache=false
-
-
-//≈‰÷√¡Ÿ ±’À∫≈√‹¬Î
-spring.security.user.name=admin
-spring.security.user.password=admin
-
+#mybatis.type-aliases-package=com.springboot.entity
+#mybatis.mapper-locations=classpath:mapper/*.xml
+#spring.datasource.url=jdbc:mysql://ssr.sady.vip:3306/mybatis?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.thymeleaf.cache=false
+#
+#
+#//≈‰÷√¡Ÿ ±’À∫≈√‹¬Î
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+#
