--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,3 +20,14 @@ jobs:
         java-version: 1.8
     - name: 使用Maven编译
       run: mvn -B package --file web/pom.xml
+    - name: Deploy
+      uses: saltbo/uptoc@master
+      with:
+        driver: qiniu
+        region: cn-east-1
+        bucket: warlue
+        exclude: .cache,test
+        dist: public
+      env:
+        UPTOC_UPLOADER_AK: ${{ secrets.UPTOC_UPLOADER_KEYID }}
+        UPTOC_UPLOADER_SK: ${{ secrets.UPTOC_UPLOADER_KEYSECRET }}
