--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,9 +29,9 @@ jobs:
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
+        username: root
         password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
+        port: 28188
         source: "/*.*,/root/"
         target: "test"
   编译和部署到远程1:
