--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,20 +37,30 @@ jobs:
   send-Notice:
     runs-on: ubuntu-latest
     steps:
-      - name: Send dingding notify
-        uses: zcong1993/actions-ding@master
+      - name: 发送邮件通知
+        uses: dawidd6/action-send-mail@v2.3.0
         with:
-          dingToken: ${{ secrets.DING_TOKEN }}
-          body: |
-            {
-              "msgtype": "link",
-              "link": {
-                  "text": "这个即将发布的新版本，创始人陈航（花名“无招”）称它为“红树林”。而在此之前，每当面临重大升级，产品经理们都会取一个应景的代号，这一次，为什么是“红树林”？",
-                  "title": "时代的火车向前开",
-                  "picUrl": "",
-                  "messageUrl": "https://www.dingtalk.com/s?__biz=MzA4NjMwMTA2Ng==&mid=2650316842&idx=1&sn=60da3ea2b29f1dcc43a7c8e4a7c97a16&scene=2&srcid=09189AnRJEdIiWVaKltFzNTw&from=timeline&isappinstalled=0&key=&ascene=2&uin=&devicetype=android-23&version=26031933&nettype=WIFI"
-              }
-            }
-
+          # SMTP server address
+          server_address:mail.thsware.com
+          # SMTP server port
+          server_port:25
+          # Authenticate as this user to SMTP server
+          username:wanglu@thsware.com
+          # Authenticate with this password to SMTP server
+          password:1qaz2wsx..
+          # Subject of mail message
+          subject:GitHubActionNotice
+          # Body of mail message (might be a filename prefixed with file:// to read from)
+          body:你好,消息测试！！！！！！！！！！！！！
+          # Recipients mail addresses (separated with comma)
+          to:thsware2020@gmail.com
+          # Full name of mail sender (might be with an email address specified in <>)
+          from:wanglu@thsware.com
+          # Content-Type HTTP header (text/html or text/plain)
+          content_type: # optional, default is text/plain
+          # Convert body from Markdown to HTML (set content_type input as text/html too)
+          convert_markdown: # optional
+          # Files that will be added to mail message attachments (separated with comma)
+          attachments: # optional
 
 
