新的数据库，增加JAPIDOC插件

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -86,6 +86,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+
+<!--		JApiDocs-->
+		<dependency>
+			<groupId>io.github.yedaxia</groupId>
+			<artifactId>japidocs</artifactId>
+			<version>1.4.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
