--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://ssr.sady.vip:3306/mybatis?serverTimezone=UTC
+#    url: jdbc:mysql://ssr.sady.vip:3306/mybatis?serverTimezone=UTC
+#    username: root
+#    password: 123456
+
+    url: jdbc:mysql://file.sady.vip:3306/THSDATA?serverTimezone=UTC
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   security:
     user:
@@ -10,6 +14,8 @@ spring:
       password: admin
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
       ###逻辑未删除的值
@@ -20,10 +26,8 @@ mybatis-plus:
 ##增加日志输出，方便定位问题
 logging:
   level:
-    root : warn
-    com.springboot.dao: trace
+    root : info
+#    com.springboot.dao: trace
   ###控制台输出格式
   pattern:
     console: '%p%m%n'
-
-
